syntax = "proto3";
package external;

message MapValue {
    string Value = 1;
}